--- a/about.html
+++ b/about.html
@@ -8,8 +8,7 @@
 </head>
 <body>
 	<!-- container -->
-	<div class="container">	
-		
+	<div class="container">		
 	<nav class="navigation">
 		<img src="images/softhills-logo.png" alt="Soft hills logo" id="linked-image">
 		<ul>		
@@ -22,7 +21,7 @@
 	</nav>
 	<!-- image one contents -->
 	<div class="image-one">
-		<img src="images/jumbo-about.png" alt="image-one" class="image-one">
+		<img src="images/jumbo-about.png" alt="image-one" id="image-one">
 		<div class="about-content">
 			<h2>About</h2>
 			<p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to cooperate strategy foster collaborative thinking to further the overall value preposition. Organically grow the holistic world view of disruptive innovation via workspace diversity and empowerment.</p>
