--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
         <!-- image one -->
         <div class="image-one">
-            <img src="images/jumbo.jpg" alt="image-one" class="image-one">
+            <img src="images/jumbo.jpg" alt="image-one" id="image-one">
         </div>
         <!-- The past -->
         <div class="first-set">
@@ -136,6 +136,6 @@
             </ul>
         </footer>
     </div>
-    
+</div>  
 </body>
 </html>
