--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" description="The softhills technology">
+	<meta name="description" content="The future and the past">
+    <meta name="keywords" content="boxes, the moon">
     <title>index</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -22,7 +25,7 @@
         </nav>
         <!-- image one -->
         <div class="image-one">
-            <img src="images/jumbo.jpg" alt="image-one" id="image-one">
+            <img src="images/jumbo.jpg" alt="image-one" class="image-one">
         </div>
         <!-- The past -->
         <div class="first-set">
@@ -136,6 +139,6 @@
             </ul>
         </footer>
     </div>
-</div>  
+    
 </body>
 </html>
